--- a/new/templates/newquery.htm
+++ b/new/templates/newquery.htm
@@ -17,7 +17,7 @@
                                     <tr>
                                         <td>&nbsp;</td>
                                         <td>
-                                            <input type="button" value="" class="btn_cx" onClick="return chekq(this)" />
+                                            <input type="button" value="查询" class="btn btnbr" onClick="return chekq(this)" />
                                             <input type="hidden" name="action" value="query" />
                                             <input type="hidden" name="class" value="22" />
                                         </td>
