--- a/new/templates/newlogin.htm
+++ b/new/templates/newlogin.htm
@@ -29,7 +29,7 @@
                     <tr>
                         <td></td>
                         <td>
-                            <input type="submit" value="" class="btn_login"/>
+                            <input type="submit" value="登录" class="btn btnbr"/>
                             <input type="hidden" name="action" value="login"/>
                             <input type="hidden" name="ref" value="list.php?class=14"/>
                         </td>
@@ -66,7 +66,7 @@
                     <tr>
                         <td align="right"></td>
                         <td>
-                            <input type="submit" value="" class="btn_tj"/>
+                            <input type="submit" value="提交" class="btn btnbr"/>
                             <input type="hidden" name="action" value="reg"/>
                             <input type="hidden" name="ref" value="list.php?class=14"/>
                         </td>
@@ -75,8 +75,4 @@
                 </form>
             </div>
         </div>
-{% endblock %}
-
-{% block js %}
-        <script type="text/javascript" src="{{ STATIC_URL }}new/js/sides.js"></script>
 {% endblock %}
