--- a/new31/templates/new.base.htm
+++ b/new31/templates/new.base.htm
@@ -35,11 +35,11 @@
                 <dt>Tel：4000-5927-31</dt>
                 <dd>
                     <a href="{% url 'new:newquery' %}">订单查询</a>
-                    <a href="{% url 'cart:cart' %}">购物车</a>
+                    <a href="{% url 'new:newcart' %}">购物车</a>
 {% if user.is_authenticated %}
                     <a href="{% url 'account:myOrd' %}">我的订单（ {{ user.newOrd|default:0 }} ）</a>
 {% else %}
-                    <a href="{% url 'account:login' %}">登录</a>
+                    <a href="{% url 'new:newlogin' %}">登录</a>
 {% endif %}
                 </dd>
                 <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->  
